Fixed bug #30889 (Conflict between __get/__set and ++ operator)